# Scripts

./: .gitignore  0_updateHistory.cmd  ReadMe.md  ReadMe.txt  exc.txt  exctract_base.cmd  init.cmd  zip.cmd
2017-07-01_0000_batch_build_and_autozip/: FlySimulator_zip.cmd
2017-08-24_0106_Python_Test_Raspberry/: machine_control2.py
__NEW_SCRIPTS/: FlightSimulator_build_release.cmd  FlightSimulator_zip.cmd  FlySimulator_build_release.cmd  RSU-135_build_release.cmd  __path_all.cmd  __zip_init.cmd
__dayli_scripts/: QKD_vagrant_suspend.cmd  QKD_vagrant_up.cmd  _ccleaner_auto.cmd  _flash_unmount.cmd  _kill_all_process.cmd  _kill_all_process_not_force.cmd  _power_base.cmd  _tk_dm_all.cmd  _tk_dm_all_force.cmd  power_off.cmd  power_reboot.cmd  stop_all.cmd
_complex/: ComplexBuildRSU135.cmd
autoit/2018-00-00_0000_ScreenShotOnClick/: my_shared.au3  run_screenshot_on_click.bat  screenshot_on_clicks.au3
bash/Book_Matthew_Beginning_Linux_Programming/: p051_try_var  p059_for_ls  p062_case  p068_simple_func  p070_return_value  p075_source  p079_expr  p082_set  p083_trap  p096_substitution
batch-wincmd/: ReadMe.md
batch-wincmd/2017-07-01_0000_batch_build_and_autozip/: RSU-135_zip.cmd
batch-wincmd/2019-01-17_1717_batch_update_proj_files/: convert_script.bat
batch-wincmd/2020-07-16_0155_MAIN/: sf.bat
batch/2017-07-01_0000_batch_build_and_autozip/: __path_all.cmd  __zip_init.cmd
batch/2017-07-02_0000_batch_daily_scripts/: QKD_vagrant_up.cmd  _tk_dm_all_force.cmd
batch/2017-07-03_0000_batch_win_empty_ext_setup/: associate_not_extension_files_with_notepad_p_p.cmd  associate_not_extension_files_with_notepad_p_p_UNDO.cmd
batch/2018-03-02_2108_batch_win_remote_copy_for_VS/: remote_copy.cmd
builds/: _build_cycle.cmd  build_FlightSimulator_Release.cmd  build_RSU135_LogOff.cmd
cmake/2017-07-20_0000_make/: .gitignore  README.md  ReadMe.txt  main.cpp
cmake/2017-07-21_0000_make/: Makefile  program.cpp
cmake/2017-07-25_2352_CMake_GuiChat_QtWidgets/: CMakeLists.txt  project_run.cmd
cmake/2017-07-25_2352_CMake_GuiChat_QtWidgets/src/Server/: ServerActivity.h  ServerApplication.cpp  ServerApplication.h  ServerCore.cpp  ServerCore.h  ServerGraphicSystem.cpp  ServerGraphicSystem.h  ServerMain.cpp  ServerMainWindow.cpp  ServerMainWindow.h  ServerSettings.h
cmake/2017-07-25_2352_CMake_GuiChat_QtWidgets/ui/: ServerMainWindow.ui
cmake/2017-07-25_2352_CMake_GuiChat_QtWidgets/uml/: 2017-07-26_first.xmi
cmake/2017-08-04_2230_CMake_base/: CMakeLists.txt  cmake_remove.cmd  cmake_run.cmd
cmake/2017-08-04_2230_CMake_base/src/: main.cpp  math2.cpp
cmake/2017-08-14_0100_CMake_GTest/: CMakeLists.txt  cmake_run.cmd
cmake/2017-08-14_0100_CMake_GTest/my_math_lib/: CMakeLists.txt
cmake/2017-08-14_0100_CMake_GTest/my_math_lib/include/my_math/: my_math.h
cmake/2017-08-14_0100_CMake_GTest/my_math_lib/src/: my_math.cpp
cmake/2017-08-14_0100_CMake_GTest/tests/: CMakeLists.txt
cmake/2017-08-14_0100_CMake_GTest/tests/test_my_math/: CMakeLists.txt  test_my_math.cpp
cmake/2017-08-29_0058_CMake_gtest_shared/: CMakeLists.txt  build.cmd  build2.cmd
cmake/2017-08-29_0058_CMake_gtest_shared/my_math_lib/: CMakeLists.txt
cmake/2017-08-29_0058_CMake_gtest_shared/my_math_lib/include/my_math/: my_math.h
cmake/2017-08-29_0058_CMake_gtest_shared/my_math_lib/src/: my_math.cpp
cmake/2017-08-29_0058_CMake_gtest_shared/my_math_lib/test/: CMakeLists.txt  my_math_unittest.cpp
cmake/2017-08-29_0058_CMake_gtest_shared/parse_stream_lib/: CMakeLists.txt
cmake/2017-08-29_0058_CMake_gtest_shared/parse_stream_lib/include/parse_stream/: parse_stream.h
cmake/2017-08-29_0058_CMake_gtest_shared/parse_stream_lib/src/: parse_stream.cpp
cmake/2017-09-14_1154_CMake_StdPlus_GlobRecurse/: CMakeLists.txt  cmake_run.cmd
copy/: cpy_FlightSimulator.cmd  cpy_RSU-135.cmd
daily_scripts/: stop_all.cmd
dayli_scripts/: ADATA_G.cmd  _tk_cycle.cmd  _tk_dm_all.cmd
for zzzDLL/: cpy_RSU-135.cmd  zip_init.cmd
for_zzzDLL/: build_RSU135.cmd  build_RSU135_LogOff.cmd  build_RSU135_Release.cmd  build_init.cmd  nsis_RSU-135.nsi  zip_RSU-135.cmd
nsis/: nsis_RSU-135.cmd  nsis_RSU-135.nsi
python/2016-12-00_0000_YandexSchool_ML/: runPythonInThisFolder.cmd
python/2017-02-00_0000_HSE_Winter_School/: ClusterNPlus.ipynb  WinterSchool_ClusterNPlus1.py
python/2017-08-24_0106_Python_Test_Raspberry/: 001.py  002.py  003.py  led_blink.py  machine_control.py
python/2018-01-04_0420_TestWebGrab/: table_parse.ipynb  web_grab_001.py
python/2019-10-07_1815_AnkiDeckGenerator/: .gitignore  Friends s01e03.apkg  ReadMe.md  anky_deck_generator.py  back_template.txt  back_template2.txt  bad_words.txt  front_template.txt  front_template2.txt  google_image_simple.py  image_downloader2.py  importFile.apkg  importFile.txt  importFile.txt_export.apkg  short_sample.apkg
python/2019-10-07_1815_ConvertVocabulary.comListToCSV/: ReadMe.md  VocToCsv.py
python/2019-10-15_1727_YouTubeScriptDownloader/: youtube_script_downloader.py
python/2019-10-18_1507_VocComArtefactsFix/: convert_artefacts.py
python/2019-12-09_1451_BatchPictureLoader/: ReadMe.md  load_pictures.py
python/2020-02-06_1352_GPXCleaner/: ReadMe.md  clean_all_tracks_in_downloads_with_replace.cmd  examples.py  find_multy_tracks_files_in_outdoor.cmd  generate_tracks_for_google.cmd  gpx_cleaner.py  gpxclean.bat  gpxclean.py  gpxcleaner.py  gpxextractname.bat  gpxextractname.py  gpxlib.py  gpxmerge.bat  gpxmerge.py  gpxsplit.py  (+5 more)
shared/: _path_all.cmd  _promtString.cmd
zip_pack/: zip_RSU-135.cmd  zip_init.cmd
zip_unpack/: exctract_base.cmd
(+73 files in other folders)
