CMAKE_MINIMUM_REQUIRED(VERSION 3.9.0)

PROJECT(my_math)

SET(HEADER_FILES
    include/my_math/my_math.h)

SET(SOURCE_FILES
    src/my_math.cpp)

ADD_LIBRARY(my_math STATIC ${SOURCE_FILES} ${HEADER_FILES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ./include)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ./include/${PROJECT_NAME})

ADD_SUBDIRECTORY(test)